--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 name: Push Docker Image to ECR
 on:
     push:
-      branches: [ main ]
+      branches: [ main, master ]
     workflow_dispatch:
 jobs:
     build:
